--- a/DP.HTML
+++ b/DP.HTML
@@ -20,10 +20,11 @@
                 <label id="email-label"><strong>E-mail:</strong></label>
                 <input type="text" id="email" name="email" class="form" required placeholder="e.g@gmail.com"><br>
                 <br>
-                
                 <br> 
                 <label for="Age" id="age-label"><strong>Age:</strong></label>
                 <input type="number" id="number" min="18" max="75" class="form" required placeholder="18+"><br>
+                <label for="password" id="password-label"><strong>Password:</strong></label>
+                <input id="text" type="password" name="password" class="form" required placeholder="enter your valid password"><br>
                 <br>
                 <div id="dropdown-div"><br>
                 <label id="dropdown-label"><strong>Racing cars you are<em> expert</em> at: </strong></label><br>
@@ -68,5 +69,6 @@
                  <button type="Submit">Submit</button>
                  <input type="Reset" value="Reset">
                  </div>
+                 <script src="dp.js"></script>
 </body>
 </html>
