GBSFLEX-login form

--- a/Log.html
+++ b/Log.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Log.js">
+    <link rel="stylesheet" href="log.css">
 </head>
 <body>
     <h1 id="main">Login to GBSFLEX</h1>
 <div id="container">
   <form name="login" action="success.html" method="POST">
     <label for="text" id="name" class="form">Name:</label><br>
-    <input type="text" name="user" id="Username">
+    <input type="text" name="user" id="Username" placeholder="What's your detailed name.">
     <br>
     <br>
     <label for="text" id="password" class="form">Password:</label><br>
-    <input type="password" name="pword" id="Password">
+    <input type="password" name="pword" id="Password" placeholder="Write your password.">
     <br>
     <br>
     <input type="submit" value="Submit">
