--- a/DP.HTML
+++ b/DP.HTML
@@ -66,7 +66,7 @@
                  </div>
                  <div id="end">Do have any comment</div>
                  <textarea name="" id=""></textarea><br>
-                 <button type="Submit">Submit</button>
+                 <input type="Submit" value="Submit">
                  <input type="Reset" value="Reset">
                  </div>
                  <script src="dp.js"></script>
