GBSFLE-Login form

--- a/Log.html
+++ b/Log.html
@@ -21,6 +21,9 @@
     <input type="submit" value="Submit">
     <input type="reset" value="Reset">
   </form>
+  <a href="Login to GBSFLEX" target="_blank">Login to GBSFLEX!</a>
+  <script src="Log.js">
+  </script>
 </div>
 </body>
 </html>
